--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,15 @@
 html,
 body {
   height: 100%;
+  max-width: 375px; /* фиксируем ширину */
+  margin: 0 auto; /* по центру */
+  background: #fff; /* фон */
+  overflow-x: hidden; /* убираем горизонтальный скролл */
 }
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 64px; /* высота вашей шапки */
+  scroll-padding-top: 64px; /* высота шапки */
 }
 
 body {
@@ -31,8 +35,9 @@ video {
 .header {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000; /* чтобы не перекрывали другие элементы */
-  background-color: #fff; /* или любой фон */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 375px;
+  z-index: 1000;
+  background-color: #fff;
 }
